cleaned clinic scss

--- a/src/pages/clinic-manager/clinic/clinic.html
+++ b/src/pages/clinic-manager/clinic/clinic.html
@@ -7,118 +7,109 @@
 </ion-header>
 <ion-content #Content padding>
     <form [ngClass]="{'edit-mode': isEditMode(), 'read-only': !isEditMode()}" [formGroup]="clinicForm" #form="ngForm" (ngSubmit)="xhr.submit($event)">
-        <ion-list>
-            <div class="row form-group">
-                <ion-grid>
-                    <ion-row>
-                        <ion-col col-12 col-sm-12 col-md-4>
-                            <ion-label class="form-label h1">Name <span *ngIf="isEditMode()">*</span></ion-label>
-                            <ion-item round>
-                                <ion-input name="name" formControlName="name" [disabled]="!isEditMode()"></ion-input>
-                            </ion-item>
-                            <div class="error-message" *ngIf="clinicForm.get('name')?.dirty &&  clinicForm.get('name').invalid">
-                                {{ errors.name }}
-                            </div>
-                        </ion-col>
-                    </ion-row>
+        <ion-grid>
+            <ion-row>
+                <ion-col col-12 col-sm-12 col-md-4>
+                    <ion-label class="form-label">Name <span *ngIf="isEditMode()">*</span></ion-label>
+                    <ion-item round>
+                        <ion-input name="name" formControlName="name" [disabled]="!isEditMode()"></ion-input>
+                    </ion-item>
+                    <div class="error-message" *ngIf="clinicForm.get('name')?.dirty &&  clinicForm.get('name').invalid">
+                        {{ errors.name }}
+                    </div>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                    <ion-label class="form-label">Address <span *ngIf="isEditMode()">*</span></ion-label>
+                    <ion-item round>
+                        <ion-textarea name="address" formControlName="address" [disabled]="!isEditMode()"></ion-textarea>
+                    </ion-item>
+                    <div class="error-message" *ngIf="clinicForm.get('Address')?.dirty &&  clinicForm.get('Address').invalid">
+                        {{ errors.address }}
+                    </div>
+                </ion-col>
+            </ion-row>
+
+            <ion-row>
+                <ion-col>
+                    <ion-label class="form-label">Schedule <span *ngIf="isEditMode()">*</span></ion-label>
+                </ion-col>
+                <ion-col *ngIf="isEditMode()">
+                    <a class="form-label" (click)="createSchedule($event)" color="accent-dark">+ Add Schedule</a>
+                </ion-col>
+            </ion-row>
+
+            <ion-card *ngFor="let schedule of schedules; let si = index">
+                <ion-card-header>
                     <ion-row>
                         <ion-col>
-                            <ion-label class="form-label h1">Address <span *ngIf="isEditMode()">*</span></ion-label>
-                            <ion-item round>
-                                <ion-textarea name="address" formControlName="address" [disabled]="!isEditMode()"></ion-textarea>
-                            </ion-item>
-                            <div class="error-message" *ngIf="clinicForm.get('Address')?.dirty &&  clinicForm.get('Address').invalid">
-                                {{ errors.address }}
-                            </div>
+                            <ion-label class="form-label"> {{ days[schedule.day] }} </ion-label>
                         </ion-col>
-                    </ion-row>
-                </ion-grid>
-            </div>
-        </ion-list>
-        <ion-list>
-            <div class="row">
-                <ion-grid>
-                    <ion-row>
                         <ion-col>
-                            <ion-label class="form-label h1">Schedule <span *ngIf="isEditMode()">*</span></ion-label>
-                        </ion-col>
-                        <ion-col *ngIf="isEditMode()">
-                            <a class="form-label h1" (click)="createSchedule($event)" color="accent-dark">+ Add Schedule</a>
+                            <ion-icon name="trash" (click)="removeSchedule($event, schedule.day, schedules, si)" color="accent-dark"></ion-icon>
                         </ion-col>
                     </ion-row>
+                </ion-card-header>
+                <ion-card-content>
+                    <ion-item no-lines>
+                        <ion-row center *ngFor="let time of schedule.times; let ti = index">
+                            <ion-col>
+                                {{ time.from}} to {{ time.to }}
+                            </ion-col>
+                            <ion-col>
+                                <ion-icon name="trash" (click)="removeTime($event, schedule.day, time, schedule.times, ti)" color="accent-dark"></ion-icon>
+                            </ion-col>
+                        </ion-row>
+                    </ion-item>
+                </ion-card-content>
+            </ion-card>
 
-                    <ion-card *ngFor="let schedule of schedules; let si = index">
-                        <ion-card-header>
-                            <ion-row>
-                                <ion-col>
-                                    <ion-label class="form-label"> {{ days[schedule.day] }} </ion-label>
-                                </ion-col>
-                                <ion-col>
-                                    <ion-icon name="trash" (click)="removeSchedule($event, schedule.day, schedules, si)" color="accent-dark"></ion-icon>
-                                </ion-col>
-                            </ion-row>
-                        </ion-card-header>
-                        <ion-card-content>
-                            <ion-item no-lines>
-                                <ion-row center *ngFor="let time of schedule.times; let ti = index">
-                                    <ion-col>
-                                        {{ time.from}} to {{ time.to }}
-                                    </ion-col>
-                                    <ion-col>
-                                        <ion-icon name="trash" (click)="removeTime($event, schedule.day, time, schedule.times, ti)" color="accent-dark"></ion-icon>
-                                    </ion-col>
-                                </ion-row>
-                            </ion-item>
-                        </ion-card-content>
-                    </ion-card>
+            <ion-row *ngIf="errors.schedule">
+                <ion-col col-12 col-sm-12 col-md-12>
+                    <div class="error-message">
+                        {{ errors.schedule }}
+                    </div>
+                </ion-col>
+            </ion-row>
 
-                    <ion-row *ngIf="errors.schedule">
-                        <ion-col col-12 col-sm-12 col-md-12>
-                            <div class="error-message">
-                                {{ errors.schedule }}
-                            </div>
-                        </ion-col>
-                    </ion-row>
+            <ion-row>
+                <ion-col col-6 col-sm-6 col-md-6>
+                    <ion-label class="form-label">Contacts <span *ngIf="isEditMode()">*</span></ion-label>
+                </ion-col>
+                <ion-col col-6 col-sm-6 col-md-6>
+                    <a class="form-label" (click)="addContact($event)" color="accent-dark">+ Add Contact</a>
+                </ion-col>
+            </ion-row>
 
-                    <ion-row>
-                        <ion-col col-6 col-sm-6 col-md-6>
-                            <ion-label class="form-label h1">Contacts <span *ngIf="isEditMode()">*</span></ion-label>
-                        </ion-col>
-                        <ion-col col-6 col-sm-6 col-md-6>
-                            <a class="form-label h1" (click)="addContact($event)" color="accent-dark">+ Add Contact</a>
-                        </ion-col>
-                    </ion-row>
+            <ion-row class="contact-header">
+                <ion-col col-4 col-sm-4 col-md-4>
+                    <ion-label class="form-label">Type</ion-label>
+                </ion-col>
+                <ion-col col-5 col-sm-5 col-md-5>
+                    <ion-label class="form-label">Detail</ion-label>
+                </ion-col>
+            </ion-row>
+            <ion-row class="contact-details" *ngFor="let contact of contacts; let idx = index">
+                <ion-col col-4 col-sm-4 col-md-4>
+                    <ion-label>{{contactTypes[contact.contactType]}}</ion-label>
+                </ion-col>
+                <ion-col col-5 col-sm-5 col-md-5>
+                    <ion-label>{{contact.contactDetail}}</ion-label>
+                </ion-col>
+                <ion-col col-3 col-sm-3 col-md-3>
+                    <ion-icon name="trash" (click)="removeContact($event, idx)" color="accent-dark"></ion-icon>
+                </ion-col>
+            </ion-row>
 
-                    <ion-row class="contact-header">
-                        <ion-col col-4 col-sm-4 col-md-4>
-                            <ion-label class="form-label">Type</ion-label>
-                        </ion-col>
-                        <ion-col col-5 col-sm-5 col-md-5>
-                            <ion-label class="form-label">Detail</ion-label>
-                        </ion-col>
-                    </ion-row>
-                    <ion-row class="contact-details" *ngFor="let contact of contacts; let idx = index">
-                        <ion-col col-4 col-sm-4 col-md-4>
-                            <ion-label>{{contactTypes[contact.contactType]}}</ion-label>
-                        </ion-col>
-                        <ion-col col-5 col-sm-5 col-md-5>
-                            <ion-label>{{contact.contactDetail}}</ion-label>
-                        </ion-col>
-                        <ion-col col-3 col-sm-3 col-md-3>
-                            <ion-icon name="trash" (click)="removeContact($event, idx)" color="accent-dark"></ion-icon>
-                        </ion-col>
-                    </ion-row>
-
-                    <ion-row *ngIf="errors.contact">
-                        <ion-col col-12 col-sm-12 col-md-12>
-                            <div class="error-message">
-                                {{ errors.contact }}
-                            </div>
-                        </ion-col>
-                    </ion-row>
-                </ion-grid>
-            </div>
-        </ion-list>
+            <ion-row *ngIf="errors.contact">
+                <ion-col col-12 col-sm-12 col-md-12>
+                    <div class="error-message">
+                        {{ errors.contact }}
+                    </div>
+                </ion-col>
+            </ion-row>
+        </ion-grid>
         <div center>
             <xhr-button #xhr round large color="accent" type="submit" [hidden]="!isEditMode()" [disabled]="clinicForm.invalid || form.invalid"
                 (xhrClick)="submitForm($event)">
