--- a/src/pages/clinic-manager/clinic-manager.html
+++ b/src/pages/clinic-manager/clinic-manager.html
@@ -1,7 +1,7 @@
 <ion-content #Content padding>
     <h3>Number of Clinics: {{ allowableClinics }}</h3>
 
-    <ion-card (click)="viewClinic(clinic, i)" *ngFor="let clinic of clinics;let i=index">
+    <ion-card *ngFor="let clinic of clinics;let i=index">
 
         <ion-card-content>
             <h2>Name: {{ clinic?.name }}</h2>
@@ -12,7 +12,7 @@
             </ul>
             <h2>Contact Us:</h2>
             <ul>
-                <li *ngFor="let contact of clinic?.contacts">{{ contactType[contact?.contactType] }} : {{ contact?.contactDetail }}</li>
+                <li *ngFor="let contact of clinic?.contacts">{{ contactType[contact?.contactType] }} : {{ contact?.contact }}</li>
             </ul>
 
             <a (click)="editClinic(clinic, i)" color="accent">Edit&nbsp;&nbsp;&nbsp;</a>
