--- a/src/pages/clinic-manager/clinic/clinic.html
+++ b/src/pages/clinic-manager/clinic/clinic.html
@@ -32,36 +32,36 @@
             </ion-row>
 
             <ion-row>
-                <ion-col>
+                <ion-col col-6 col-sm-6 col-md-6>
                     <ion-label class="form-label">Schedule <span *ngIf="isEditMode()">*</span></ion-label>
                 </ion-col>
-                <ion-col *ngIf="isEditMode()">
-                    <a class="form-label" (click)="createSchedule($event)" color="accent-dark">+ Add Schedule</a>
+                <ion-col col-6 col-sm-6 col-md-6>
+                    <ion-label class="form-label" *ngIf="isEditMode()">
+                        <a (click)="createSchedule($event)" color="accent-dark">+ Add Schedule</a>
+                    </ion-label>
                 </ion-col>
             </ion-row>
 
             <ion-card *ngFor="let schedule of schedules; let si = index">
                 <ion-card-header>
                     <ion-row>
-                        <ion-col>
+                        <ion-col col-6 col-sm-6 col-md-6>
                             <ion-label class="form-label"> {{ days[schedule.day] }} </ion-label>
                         </ion-col>
-                        <ion-col>
+                        <ion-col col-6 col-sm-6 col-md-6>
                             <ion-icon name="trash" (click)="removeSchedule($event, schedule.day, schedules, si)" color="accent-dark"></ion-icon>
                         </ion-col>
                     </ion-row>
                 </ion-card-header>
                 <ion-card-content>
-                    <ion-item no-lines>
-                        <ion-row center *ngFor="let time of schedule.times; let ti = index">
-                            <ion-col>
-                                {{ time.from}} to {{ time.to }}
-                            </ion-col>
-                            <ion-col>
-                                <ion-icon name="trash" (click)="removeTime($event, schedule.day, time, schedule.times, ti)" color="accent-dark"></ion-icon>
-                            </ion-col>
-                        </ion-row>
-                    </ion-item>
+                    <ion-row center *ngFor="let time of schedule.times; let ti = index">
+                        <ion-col col-8 col-sm-8 col-md-8>
+                            <ion-label>{{ time.from}} to {{ time.to }}</ion-label>                            
+                        </ion-col>
+                        <ion-col col-4 col-sm-4 col-md-4>
+                            <ion-icon name="trash" *ngIf="isEditMode()" (click)="removeTime($event, schedule.day, time, schedule.times, ti)" color="accent-dark"></ion-icon>
+                        </ion-col>
+                    </ion-row>
                 </ion-card-content>
             </ion-card>
 
@@ -78,7 +78,9 @@
                     <ion-label class="form-label">Contacts <span *ngIf="isEditMode()">*</span></ion-label>
                 </ion-col>
                 <ion-col col-6 col-sm-6 col-md-6>
-                    <a class="form-label" (click)="addContact($event)" color="accent-dark">+ Add Contact</a>
+                    <ion-label class="form-label" *ngIf="isEditMode()">
+                        <a (click)="addContact($event)" color="accent-dark">+ Add Contact</a>
+                    </ion-label>
                 </ion-col>
             </ion-row>
 
@@ -95,10 +97,10 @@
                     <ion-label>{{contactTypes[contact.contactType]}}</ion-label>
                 </ion-col>
                 <ion-col col-5 col-sm-5 col-md-5>
-                    <ion-label>{{contact.contactDetail}}</ion-label>
+                    <ion-label>{{contact.contact}}</ion-label>
                 </ion-col>
                 <ion-col col-3 col-sm-3 col-md-3>
-                    <ion-icon name="trash" (click)="removeContact($event, idx)" color="accent-dark"></ion-icon>
+                    <ion-icon name="trash" *ngIf="isEditMode()" (click)="removeContact($event, idx)" color="accent-dark"></ion-icon>
                 </ion-col>
             </ion-row>
 
