--- a/src/pages/clinic-manager/clinic/clinic.html
+++ b/src/pages/clinic-manager/clinic/clinic.html
@@ -37,7 +37,7 @@
                 </ion-col>
                 <ion-col col-6 col-sm-6 col-md-6>
                     <ion-label class="form-label" *ngIf="isEditMode()">
-                        <a (click)="createSchedule($event)" color="accent-dark">+ Add Schedule</a>
+                        <a (click)="createSchedule($event)" color="accent-dark">+ add Schedule</a>
                     </ion-label>
                 </ion-col>
             </ion-row>
@@ -79,7 +79,7 @@
                 </ion-col>
                 <ion-col col-6 col-sm-6 col-md-6>
                     <ion-label class="form-label" *ngIf="isEditMode()">
-                        <a (click)="addContact($event)" color="accent-dark">+ Add Contact</a>
+                        <a (click)="addContact($event)" color="accent-dark">+ add Contact</a>
                     </ion-label>
                 </ion-col>
             </ion-row>
