--- a/src/pages/clinic-manager/clinic/clinic.html
+++ b/src/pages/clinic-manager/clinic/clinic.html
@@ -44,7 +44,7 @@
 
             <ion-card *ngFor="let schedule of schedules; let si = index">
                 <ion-card-header>
-                    <ion-row>
+                    <ion-row class="schedule-header">
                         <ion-col col-6 col-sm-6 col-md-6>
                             <ion-label class="form-label"> {{ days[schedule.day] }} </ion-label>
                         </ion-col>
@@ -54,7 +54,7 @@
                     </ion-row>
                 </ion-card-header>
                 <ion-card-content>
-                    <ion-row center *ngFor="let time of schedule.times; let ti = index">
+                    <ion-row class="schedule-details" *ngFor="let time of schedule.times; let ti = index">
                         <ion-col col-8 col-sm-8 col-md-8>
                             <ion-label>{{ time.from}} to {{ time.to }}</ion-label>                            
                         </ion-col>
@@ -100,7 +100,7 @@
                     <ion-label>{{contact.contact}}</ion-label>
                 </ion-col>
                 <ion-col col-3 col-sm-3 col-md-3>
-                    <ion-icon name="trash" *ngIf="isEditMode()" (click)="removeContact($event, idx)" color="accent-dark"></ion-icon>
+                    <ion-icon name="trash" *ngIf="isEditMode() || contact.isProfileContacts" (click)="removeContact($event, idx)" color="accent-dark"></ion-icon>
                 </ion-col>
             </ion-row>
 
