--- a/src/pages/clinic-manager/clinic/clinic.html
+++ b/src/pages/clinic-manager/clinic/clinic.html
@@ -42,7 +42,7 @@
                 </ion-col>
             </ion-row>
 
-            <ion-card *ngFor="let schedule of schedules; let si = index">
+            <ion-card *ngFor="let schedule of schedules.value; let si = index">
                 <ion-card-header>
                     <ion-row class="schedule-header">
                         <ion-col col-6 col-sm-6 col-md-6>
@@ -92,7 +92,7 @@
                     <ion-label class="form-label">Detail</ion-label>
                 </ion-col>
             </ion-row>
-            <ion-row class="contact-details" *ngFor="let contact of contacts; let idx = index">
+            <ion-row class="contact-details" *ngFor="let contact of contacts.value; let idx = index">
                 <ion-col col-4 col-sm-4 col-md-4>
                     <ion-label>{{contactTypes[contact.contactType]}}</ion-label>
                 </ion-col>
