Initial communication with websocket using SockJS

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,9 @@
     }
   </script>-->
 
+  <!-- sock js integration --> 
+  <script src="https://cdn.jsdelivr.net/sockjs/1/sockjs.min.js"></script>
+
   <link href="build/main.css" rel="stylesheet">
 
 </head>
