implemented clinic contact filters

--- a/src/pages/clinic-manager/clinic-manager.html
+++ b/src/pages/clinic-manager/clinic-manager.html
@@ -1,5 +1,5 @@
 <ion-content #Content padding>
-    <h3>Number of Clinics: {{ allowableClinics }}</h3>
+    <h3>Number of Clinics: {{ clinics.length }}</h3>
 
     <ion-card *ngFor="let clinic of clinics;let i=index">
         <ion-card-content>
