Clinic selection page; Schedules' initial function done and next

--- a/src/pages/manager/manager.html
+++ b/src/pages/manager/manager.html
@@ -8,11 +8,9 @@
 <ion-content>
 	<ion-list >
 		<ion-item-sliding>
-			<button ion-item (click)="go()">
-				<h2>1. Name of Group</h2>
-				<p>Doctors: doctor1, doctor2</p>
-				<p>Assistant: assistant1, assistant2</p>
-				<p>Hospital/Clinic: Clinic1</p>
+			<button ion-item (click)="go(item)" *ngFor="let item of clinicList; let idx = index">
+				<h2>{{idx+1}}. {{item?.clinicName}}</h2>
+				<p>Address: {{item?.address}}</p>
 			</button>
 			<ion-item-options side="left">
 				<button ion-button color="danger">
