--- a/src/pages/clinic-manager/clinic/clinic.html
+++ b/src/pages/clinic-manager/clinic/clinic.html
@@ -6,13 +6,13 @@
     </ion-navbar>
 </ion-header>
 <ion-content #Content padding>
-    <form [ngClass]="{'edit-mode': isEditMode(), 'read-only': !isEditMode()}" [formGroup]="clinicForm" #form="ngForm" (ngSubmit)="xhr.submit($event)">
+    <form [formGroup]="clinicForm" #form="ngForm" (ngSubmit)="xhr.submit($event)">
         <ion-grid>
             <ion-row>
                 <ion-col col-12 col-sm-12 col-md-4>
-                    <ion-label class="form-label">Clinic Name <span *ngIf="isEditMode()">*</span></ion-label>
+                    <ion-label class="form-label">Clinic Name *</ion-label>
                     <ion-item round>
-                        <ion-input name="clinicName" formControlName="clinicName" [disabled]="!isEditMode()"></ion-input>
+                        <ion-input name="clinicName" formControlName="clinicName"></ion-input>
                     </ion-item>
                     <div class="error-message" *ngIf="clinicForm.get('clinicName')?.dirty &&  clinicForm.get('clinicName').invalid">
                         {{ errors.name }}
@@ -21,9 +21,9 @@
             </ion-row>
             <ion-row>
                 <ion-col>
-                    <ion-label class="form-label">Address <span *ngIf="isEditMode()">*</span></ion-label>
+                    <ion-label class="form-label">Address *</ion-label>
                     <ion-item round>
-                        <ion-textarea name="address" formControlName="address" [disabled]="!isEditMode()"></ion-textarea>
+                        <ion-textarea name="address" formControlName="address"></ion-textarea>
                     </ion-item>
                     <div class="error-message" *ngIf="clinicForm.get('address')?.dirty &&  clinicForm.get('address').invalid">
                         {{ errors.address }}
@@ -33,10 +33,10 @@
 
             <ion-row>
                 <ion-col col-6 col-sm-6 col-md-6>
-                    <ion-label class="form-label">Schedule <span *ngIf="isEditMode()">*</span></ion-label>
+                    <ion-label class="form-label">Schedule *</ion-label>
                 </ion-col>
                 <ion-col col-6 col-sm-6 col-md-6>
-                    <ion-label class="form-label" *ngIf="isEditMode()">
+                    <ion-label class="form-label">
                         <a (click)="createSchedule($event)" color="accent-dark">+ add Schedule</a>
                     </ion-label>
                 </ion-col>
@@ -59,7 +59,7 @@
                             <ion-label>{{ time.startTime}} to {{ time.endTime }}</ion-label>                            
                         </ion-col>
                         <ion-col col-4 col-sm-4 col-md-4>
-                            <ion-icon name="trash" *ngIf="isEditMode()" (click)="removeTimeSlot($event, schedule, time, ti, si)" color="accent-dark"></ion-icon>
+                            <ion-icon name="trash" (click)="removeTimeSlot($event, schedule, time, ti, si)" color="accent-dark"></ion-icon>
                         </ion-col>
                     </ion-row>
                 </ion-card-content>
@@ -75,10 +75,10 @@
 
             <ion-row>
                 <ion-col col-6 col-sm-6 col-md-6>
-                    <ion-label class="form-label">Contacts <span *ngIf="isEditMode()">*</span></ion-label>
+                    <ion-label class="form-label">Contacts *</ion-label>
                 </ion-col>
                 <ion-col col-6 col-sm-6 col-md-6>
-                    <ion-label class="form-label" *ngIf="isEditMode()">
+                    <ion-label class="form-label">
                         <a (click)="addContact($event)" color="accent-dark">+ add Contact</a>
                     </ion-label>
                 </ion-col>
@@ -100,7 +100,7 @@
                     <ion-label>{{contact.contact}}</ion-label>
                 </ion-col>
                 <ion-col col-3 col-sm-3 col-md-3>
-                    <ion-icon name="trash" *ngIf="isEditMode() || contact.isProfileContacts" (click)="removeContact($event, idx)" color="accent-dark"></ion-icon>
+                    <ion-icon name="trash" *ngIf="!contact.isProfileContacts" (click)="removeContact($event, contact, idx)" color="accent-dark"></ion-icon>
                 </ion-col>
             </ion-row>
 
@@ -113,7 +113,7 @@
             </ion-row>
         </ion-grid>
         <div center>
-            <xhr-button #xhr round large color="accent" type="submit" [hidden]="!isEditMode()" [disabled]="clinicForm.pristine || form.pristine"
+            <xhr-button #xhr round large color="accent" type="submit" [disabled]="mode !== 'Edit' && (clinicForm.pristine || form.pristine)"
                 (xhrClick)="submitForm($event)">
                 Submit
             </xhr-button>
