--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -10,6 +10,14 @@
         <ion-icon name="browsers"></ion-icon>
         Change Group
       </button>
+      <button ion-item (click)="openAssistantManager()" color="secondary">
+        <ion-icon name="browsers"></ion-icon>
+        Manage Assistants
+      </button>
+      <button ion-item (click)="openClinicMembersManager()" color="secondary">
+        <ion-icon name="browsers"></ion-icon>
+        Manage Clinic Members 
+      </button>
       <button ion-item (click)="openManager()" color="secondary">
         <ion-icon name="cog"></ion-icon>
         Settings
