refactored get clinics by user id in manager page. fixed completion of registration in clinic manager behavior. added assistant/clinic manager tab navigations

--- a/src/pages/clinic-manager/clinic-manager.html
+++ b/src/pages/clinic-manager/clinic-manager.html
@@ -1,3 +1,10 @@
+<ion-header *ngIf="isManager">
+	<ion-navbar color="primary">
+		<ion-title>
+			Clinic Manager
+		</ion-title>
+	</ion-navbar>
+</ion-header>
 <ion-content #Content padding>
     <h3>Number of Clinics: {{ clinics.length }}</h3>
 
