--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -14,9 +14,9 @@
         <ion-icon name="browsers"></ion-icon>
         Manage Assistants
       </button>
-      <button ion-item (click)="openClinicMembersManager()" color="secondary">
+      <button ion-item (click)="openClinicManager()" color="secondary">
         <ion-icon name="browsers"></ion-icon>
-        Manage Clinic Members 
+        Manage Clinics 
       </button>
       <button ion-item (click)="openManager()" color="secondary">
         <ion-icon name="cog"></ion-icon>
