--- a/src/pages/assistant-manager/assistant-manager.html
+++ b/src/pages/assistant-manager/assistant-manager.html
@@ -1,3 +1,10 @@
+<ion-header *ngIf="isManager">
+	<ion-navbar color="primary">
+		<ion-title>
+			Asistant Manager
+		</ion-title>
+	</ion-navbar>
+</ion-header>
 <ion-content #Content padding>
 	<ion-list>
 		<ion-item-sliding *ngFor="let assistant of assistants;let i=index">
