fixed step 3 behavior for assistant. implemented search user modal.

--- a/src/pages/clinic-manager/clinic-manager.html
+++ b/src/pages/clinic-manager/clinic-manager.html
@@ -1,9 +1,9 @@
 <ion-header *ngIf="isManager">
-	<ion-navbar color="primary">
-		<ion-title>
-			Clinic Manager
-		</ion-title>
-	</ion-navbar>
+    <ion-navbar color="primary">
+        <ion-title>
+            Clinic Manager
+        </ion-title>
+    </ion-navbar>
 </ion-header>
 <ion-content #Content padding>
     <h3>Number of Clinics: {{ clinics.length }}</h3>
@@ -35,7 +35,8 @@
                     <ion-row class="actions-container">
                         <ion-col col-12 col-sm-12 col-md-12>
                             <a (click)="editClinic(clinic, i)" color="accent-dark">Edit&nbsp;&nbsp;&nbsp;</a>
-                            <a (click)="deleteClinic(clinic, i)" color="accent-dark">Delete</a>
+                            <a (click)="deleteClinic(clinic, i)" color="accent-dark">Delete&nbsp;&nbsp;&nbsp;</a>
+                            <a (click)="associateMember(clinic.clinicId)" color="accent-dark">Associate Member</a>
                         </ion-col>
                     </ion-row>
                 </ion-grid>
