--- a/src/pages/manager/manager.html
+++ b/src/pages/manager/manager.html
@@ -26,6 +26,6 @@
 	</ion-list>
 	
 	<ion-fab bottom right>
-		<button ion-fab color="accent"><ion-icon name="add"></ion-icon></button>
+		<button ion-fab color="accent"><ion-icon name="exit" (click)="logout()"></ion-icon></button>
 	</ion-fab>
 </ion-content>
