--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -85,6 +85,10 @@
 					<ion-icon name="trash"></ion-icon>
 					Delete
 				</xhr-button>
+				<button ion-button color="secondary" (click)="addOrEditQueue( customer)">
+					<ion-icon name="trash"></ion-icon>
+					Edit
+				</button>
 			</ion-item-options>
 			<ion-item-options side="right">
 				<xhr-button color="secondary" *ngFor="let button of getButtons(customer)" (xhrClick)="button.clickFn($event, customer)">
@@ -101,7 +105,7 @@
 	<ion-fab bottom right>
 		<button ion-fab color="accent"><ion-icon name="add"></ion-icon></button>
 		<ion-fab-list side="left">
-			<button color="accent-light" ion-fab (click)="addQueue()"><ion-icon name="person-add"></ion-icon></button>
+			<button color="accent-light" ion-fab (click)="addOrEditQueue()"><ion-icon name="person-add"></ion-icon></button>
 			<button color="accent-light" ion-fab><ion-icon name="search"></ion-icon>
 			</button>
 		</ion-fab-list>
