--- a/src/pages/manager/manager.html
+++ b/src/pages/manager/manager.html
@@ -6,11 +6,11 @@
 	</ion-navbar>
 </ion-header>
 <ion-content>
-	<ion-list >
+	<ion-list>
 		<ion-item-sliding>
-			<button ion-item (click)="go(item)" *ngFor="let item of clinicList; let idx = index">
-				<h2>{{idx+1}}. {{item?.clinicName}}</h2>
-				<p>Address: {{item?.address}}</p>
+			<button ion-item (click)="go(clinic)" *ngFor="let clinic of clinics; let idx = index">
+				<h2>{{idx+1}}. {{clinic?.clinicName}}</h2>
+				<p>Address: {{clinic?.address}}</p>
 			</button>
 			<ion-item-options side="left">
 				<button ion-button color="danger">
@@ -24,8 +24,9 @@
 			</ion-item-options>
 		</ion-item-sliding>
 	</ion-list>
-	
-	<ion-fab bottom right>
-		<button ion-fab color="accent"><ion-icon name="exit" (click)="logout()"></ion-icon></button>
+	<p *ngIf="clinics.length === 0">No Clinic Access. Contact your clinic administrator.</p>
+
+	<ion-fab bottom right *ngIf="clinics.length === 0">
+		<button ion-fab color="accent" (click)="logout()"><ion-icon name="power"></ion-icon></button>
 	</ion-fab>
 </ion-content>
