--- a/src/index.html
+++ b/src/index.html
@@ -28,22 +28,9 @@
 
   <link href="build/main.css" rel="stylesheet">
   <style type="text/css">
-    .sk-fading-circle {
-      margin: 100px auto;
-      width: 40px;
-      height: 40px;
-      position: absolute;
-      vertical-align: center;
-    }
+   
 
-    .sk-fading-circle .sk-circle {
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      left: 0;
-      top: 0;
-
-    }
+  
 
     .sk-fading-circle .sk-circle:before {
       content: '';
@@ -51,7 +38,7 @@
       margin: 0 auto;
       width: 15%;
       height: 15%;
-      background-color: #333;
+      background-color: white;
       border-radius: 100%;
       -webkit-animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
               animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
@@ -166,14 +153,33 @@
       40% { opacity: 1; } 
     }
 
-    .loading-bg{
-      background: url(../assets/img/bg.jpg);
+    body{
+      margin: 0px;
+      background: url("assets/img/bg.jpg");
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
-      display: table-cell;
+    }
+
+    .loading-bg{
       height: 100vh;
       width: 100vw;
+      padding: 0;
+      text-align: center;
+      display: table-cell;
+      vertical-align: middle;
+    }
+
+    .sk-fading-circle .sk-circle {
+      width: 80px;
+      height: 80px;
+      position: absolute;
+      /* left: 0; */
+      /* top: 0; */
+      left: 50vw;
+      top: 50vh;
+      margin-left: -40px;
+      margin-top: -40px;
     }
   </style>
 
