--- a/src/pages/clinic-manager/clinic/clinic.html
+++ b/src/pages/clinic-manager/clinic/clinic.html
@@ -36,8 +36,8 @@
                     <ion-label class="form-label">Schedule *</ion-label>
                 </ion-col>
                 <ion-col col-6 col-sm-6 col-md-6>
-                    <ion-label class="form-label">
-                        <a (click)="createSchedule($event)">+ add Schedule</a>
+                    <ion-label class="form-label" color="accent-dark" (click)="createSchedule($event)">
+                        + add Schedule
                     </ion-label>
                 </ion-col>
             </ion-row>
@@ -56,7 +56,7 @@
                 <ion-card-content>
                     <ion-row class="schedule-details" *ngFor="let time of schedule.timeSlot; let ti = index">
                         <ion-col col-8 col-sm-8 col-md-8>
-                            <ion-label>{{ time.startTime}} to {{ time.endTime }}</ion-label>                            
+                            <ion-label>{{ time.startTime}} to {{ time.endTime }}</ion-label>
                         </ion-col>
                         <ion-col col-4 col-sm-4 col-md-4>
                             <ion-icon name="trash" (click)="removeTimeSlot($event, schedule, time, ti, si)" color="accent-dark"></ion-icon>
@@ -78,8 +78,8 @@
                     <ion-label class="form-label">Contacts *</ion-label>
                 </ion-col>
                 <ion-col col-6 col-sm-6 col-md-6>
-                    <ion-label class="form-label">
-                        <a (click)="addContact($event)">+ add Contact</a>
+                    <ion-label class="form-label" color="accent-dark" (click)="addContact($event)">
+                        + add Contact
                     </ion-label>
                 </ion-col>
             </ion-row>
