--- a/src/pages/clinic-manager/associate-member/associate-member.html
+++ b/src/pages/clinic-manager/associate-member/associate-member.html
@@ -25,7 +25,7 @@
 					Edit Access
 				</xhr-button>-->
 				<xhr-button color="danger" (xhrClick)="deleteMember($event, member, mi)">
-					<ion-icon name="trash"></ion-icon>
+					<ion-icon name="close"></ion-icon>
 					Delete
 				</xhr-button>
 			</ion-item-options>
