--- a/src/pages/clinic-manager/clinic/clinic.html
+++ b/src/pages/clinic-manager/clinic/clinic.html
@@ -49,7 +49,7 @@
                             <ion-label class="form-label"> {{ days[schedule.dayOfWeek] }} </ion-label>
                         </ion-col>
                         <ion-col col-6 col-sm-6 col-md-6>
-                            <ion-icon name="trash" (click)="removeSchedule($event, schedule.dayOfWeek, schedules, si)" color="accent-dark"></ion-icon>
+                            <ion-icon name="close" (click)="removeSchedule($event, schedule.dayOfWeek, schedules, si)" color="accent-dark"></ion-icon>
                         </ion-col>
                     </ion-row>
                 </ion-card-header>
@@ -59,7 +59,7 @@
                             <ion-label>{{ time.startTime}} to {{ time.endTime }}</ion-label>
                         </ion-col>
                         <ion-col col-4 col-sm-4 col-md-4>
-                            <ion-icon name="trash" (click)="removeTimeSlot($event, schedule, time, ti, si)" color="accent-dark"></ion-icon>
+                            <ion-icon name="close" (click)="removeTimeSlot($event, schedule, time, ti, si)" color="accent-dark"></ion-icon>
                         </ion-col>
                     </ion-row>
                 </ion-card-content>
@@ -100,7 +100,7 @@
                     <ion-label>{{contact.contact}}</ion-label>
                 </ion-col>
                 <ion-col col-3 col-sm-3 col-md-3>
-                    <ion-icon name="trash" *ngIf="!contact.isProfileContacts" (click)="removeContact($event, contact, idx)" color="accent-dark"></ion-icon>
+                    <ion-icon name="close" *ngIf="!contact.isProfileContacts" (click)="removeContact($event, contact, idx)" color="accent-dark"></ion-icon>
                 </ion-col>
             </ion-row>
 
