--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -86,7 +86,7 @@
 					Delete
 				</xhr-button>
 				<button ion-button color="secondary" (click)="addOrEditQueue( customer)">
-					<ion-icon name="trash"></ion-icon>
+					<ion-icon name="md-create"></ion-icon>
 					Edit
 				</button>
 			</ion-item-options>
