--- a/src/pages/clinic-manager/associate-member/associate-member.html
+++ b/src/pages/clinic-manager/associate-member/associate-member.html
@@ -24,10 +24,10 @@
 					<ion-icon name="people"></ion-icon>
 					Edit Access
 				</xhr-button>-->
-				<xhr-button color="danger" (xhrClick)="deleteMember($event, member, mi)">
+				<button ion-button color="danger" (click)="deleteMember(member, mi)">
 					<ion-icon name="close"></ion-icon>
 					Delete
-				</xhr-button>
+				</button>
 			</ion-item-options>
 		</ion-item-sliding>
 	</ion-list>
